syntax = "proto3";

package greet;
option go_package = "greet/greetpb";

message Greeting {
  string first_name = 1; // field number 1
  string last_name = 2; // field number 2
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1 ;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}

service GreetService{
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server streaming rpc
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  // Client streaming rpc
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}

  // Bidirectional streaming rpc
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}
}